	* Added documentation for the "stack" to the Plugin documentation
	* Re-worded some passages in the Plugin documentation
	* Changed the "stack" from a shared List to a shared Dictionary (which makes more sense, on reflection)
	* Changed the "stack"'s name to "stash"
	* Added Libera.Chat to the server/network list

Version 0.875
	* New version
	* Updated the version number in the documentation cover pages
	* Bugfix: errors are now ignored on file reading/writing, due to "ignorable" errors being thrown on Windows
	* Topic editor now shows the full topic in a tool tip
	* Bugfix: disconnect menu item didn't appear until a channel was joined; it appears on connection now
	* Bugfix: --last commandline flag was broken
	* Added a user mode display to channel windows
	* Added a settings to the config file to toggle the user mode display
	* Added the toggle user mode display setting to the "settings" dialog
	* Channel topic display now elides text that is longer than the widget width; if elided, the full topic is displayed in a tool tip
	* If IRC colors are turned off, the presence of IRC colors is checked before attempting to strip IRC colors
	* Bugfix: the schwa in the style file generator ASCII art was backwards (ugh)
	* Changed the ASCII art for the help menu
	* If the main dialog is now passed a list() of ConnectInfo() object, it will connect to *all* of them, in sequence
	* If the user has connection script execution turned on in the user settings, autoscript will automatically load with the --last commandline option
	* Edited some of the error messages in the launcher to reflect current terminology
	* Changed the title of the "Export As..." log export filename dialog
	* "Resumed at" message now uses 24hr clock only if that option is turned on for timestamps
	* Server logs can now be optionally saved, loaded, and exported
	* Added an option to load and save server logs to the config file
	* Added the server log settings to the "settings" dialog