@@ -29,6 +29,8 @@ Version 0.880
 	* Changed the "stack" from a shared List to a shared Dictionary (which makes more sense, on reflection)
 	* Changed the "stack"'s name to "stash"
 	* Added Libera.Chat to the server/network list
+	* Bugfix: scripts weren't always UTF-8 encoded in the script editor
+	* Connection command (/connect, etc) now will load and use connection scripts (if the option is turned on in the connection dialog)
 
 Version 0.875
 	* New version
